<resources>
    <string name="app_name">WeddChills</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello in our app WeddChills!</string>
    <string name="after_hello"> This application has been divided into 8 parts. Each of them corresponds to a different part of the preparation of your wedding. Let\'s get started!</string>
    <string name="button_one_text">MAIN TASKS</string>
    <string name="button_two_text">INVITATIONS</string>
    <string name="button_tree_text">GUEST LIST</string>
    <string name="button_four_text">BUDGET</string>
    <string name="button_five_text">CALENDAR</string>
    <string name="button_six_text">DOCUMENTS</string>
    <string name="button_seven_text">PLAN OF THE CEREMONY</string>
    <string name="button_eight_text">YOUR NOTES</string>
    <string name="main_tasks_text">In this section are included all main tasks that you should do in first place.</string>
    <string name="invitation_text">Write down most important data you would like to have in your invitation.</string>
    <string name="guests_text">Your guest list. Select checkboxes if guests confirm there arrival, after that you will have complete guest list that will show at your weeding.</string>
    <string name="budget_text">What is your budget for this wedding? Add the expenses that await you. All important payment terms will be added into your Calendar.</string>
    <string name="calendar_text">Connect to your Google calendar. It will contain important dates of tasks like confirmations or payment terms.</string>
    <string name="documents_text">Checkboxes for important documents that you have to have on your big day.</string>
    <string name="ceremony_plan_text">Text field to summarize the order of activities on the day of the wedding.</string>
    <string name="notes_text">Text field for your notes.</string>
    <string name="main_tasks_text_two">This are your main tasks for your wedding. Fill them up and be ready for your big day.</string>
    <string name="invitations_text1">Right here you can write important things about your invitations.</string>
    <string name="invitations_text2">Go head and fill this text field.</string>
    <string name="invitations_text_button">Save</string>
    <string name="main_tasks_text1">Reserve the date of the ceremony</string>
    <string name="your_date_of_ceremony_text">This is date of your ceremony:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="guest_list_btn">Add guest</string>
    <string name="guest_list_text_view">Here you can add guest to your guest list. Click button and add your first guest.</string>
    <string name="guest_list_edit_text">Write name of your guest.</string>
    <string name="guest_list_btn_save">Save</string>
    <string name="main_tasks_done_checkbox">Done</string>
    <string name="main_taska_budget_btn">Go to BUDGET</string>
    <string name="main_taska_calendar_btn">Go to CALENDAR</string>
    <string name="main_taska_done_btn">Done</string>
    <string name="budget_edit_text_str_text">Service</string>
    <string name="budget_edit_text_str_text1">Click here to add your budget</string>
    <string name="budget_edit_text_int_text1">Here</string>
    <string name="budget_edit_text_int_text">How much</string>
    <string name="budget_add_btn">Add</string>
    <string name="budget_save_btn">Save</string>
    <string name="ok_btn">OK</string>
    <string name="your_budget">Your budget:</string>
    <string name="whole_budget_for_wedding_editText_hint">Enter here</string>
    <string name="remaining_budget_textView">Remaining budget: </string>
    <string name="budget_textView1">In this section you\'re adding budget for your wedding and all expenses.</string>
    <string name="budget_textView2">-------------------- \n Right below you can add your expenses. </string>
    <string name="action_plan_text_view">This is your plan for your wedding day.</string>
    <string name="LORD_text_view">This is your list of requaired documents.</string>
    <string name="notes_text_view">Your notes.</string>
    <string name="number_of_checked_guests">Number of checked guests:</string>


</resources>
