<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:background="@drawable/background">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/loginscrn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/hello"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/fstTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/after_hello"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/button_one_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink" />

        <TextView
            android:id="@+id/button_oneTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_tasks_text"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/button_two_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink"/>

        <TextView
            android:id="@+id/button_twoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/invitation_text"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/button_tree_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink"/>

        <TextView
            android:id="@+id/button_treeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/guests_text"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/button_four_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink"/>
        <TextView
            android:id="@+id/button_fourTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/budget_text"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/button_five_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink"/>
        <TextView
            android:id="@+id/button_fiveTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/calendar_text"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/button_six_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink"/>
        <TextView
            android:id="@+id/button_sixTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/documents_text"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/button_seven_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink"/>
        <TextView
            android:id="@+id/button_sevenTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ceremony_plan_text"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/button_eight_text"
            android:background="#10000000"
            android:textColor="@color/nude_pink"/>
        <TextView
            android:id="@+id/button_eightTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notes_text"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>