<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/budget_textView1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/whole_budget_for_wedding_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/whole_budget_for_wedding_editText_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/budget_right_below_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/budget_textView2"
            android:maxLines="2"/>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/budget_edit_text_str"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/budget_edit_text_str_text"
            android:inputType="text"
            android:textAlignment="center"
            android:maxLines="1"
            />

        <EditText
            android:id="@+id/budget_edit_text_int"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/budget_edit_text_int_text"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addbudgetBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="addbudget"
            android:text="@string/budget_add_btn" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/budget_save_btn" />

    </LinearLayout>

    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStr"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textViewInt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            />

    </TableRow>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/budget_left_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/remaining_budget_textView"
            />

        <TextView
            android:id="@+id/budget_left_textViewINT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="0000"
            />


    </LinearLayout>

</LinearLayout>
</ScrollView>