<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/invitations_text1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center" />

    <EditText
        android:id="@+id/invitation_edit_text_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/invitations_text2"
        android:inputType="textMultiLine"
        android:minLines="6"
        />

    <Button
        android:id="@+id/invitation_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invitations_text_button"
        android:background="#10000000"
        android:textColor="@color/nude_pink"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:id="@+id/labelID"
        android:minLines="6"/>

</LinearLayout>