<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:background="@drawable/background2">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginscrn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/guest_list_text_view"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center" />


        <EditText
            android:id="@+id/guest_list_edit_text_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/guest_list_edit_text"
            android:inputType="text"
            android:maxLines="1"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:onClick="addCheckbox"
                android:text="@string/guest_list_btn"
                android:background="#10000000"
                android:textColor="@color/colorAccent"/>

            <Button
            android:id="@+id/savebtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/guest_list_btn_save"
            android:background="#10000000"
            android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/number_of_checked_guests_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:gravity="center" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutID">


    </LinearLayout>
    </LinearLayout>
</ScrollView>